# phase2_and3_hackathon_2

./: .gitignore  GEMINI.md  README.md  todos.db
backend/: agent.py  auth.py  database.py  main.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  todos.db
backend/routers/: auth.py  chat.py  todos.py  users.py
frontend/todo_ui/: package-lock.json  tailwind.config.ts
frontend/todo_ui/app/: layout.tsx
frontend/todo_ui/app/analytics/: page.tsx
frontend/todo_ui/app/chat/: page.tsx
frontend/todo_ui/app/components/: AddTodo.tsx  StatsCards.tsx  TodoItem.tsx  TodoList.tsx
phase2_3/: .env.example  .gitignore  Dockerfile  README.md  agent.py  mcp_server.py  models.py  railway.json  schemas.py
phase2_3/routers/: chat.py  users.py
specs/: step01.md  step02.md  step03.md  step04.md  step05.md  step06.md  step07.md  step08.md  step09.md  step10.md  step11.md  step12.md  step13.md  step14.md  step15.md  step16.md  step17.md  step18.md  step19.md
specs_bot/: step01_conversation_models.md  step02_mcp_server.md  step03_openai_agent.md  step04_openai_chatkit_frontend.md  step05_chatkit_frontend.md  step06_dependencies.md  step07_architecture_diagram.md  step08_ui_redesign.md
todo_ui/: package-lock.json  package.json
todo_ui/.claude/: settings.local.json
todo_ui/app/: globals.css  page.tsx
todo_ui/app/analytics/: page.tsx
todo_ui/app/calendar/: page.tsx
todo_ui/app/chat/: page.tsx  page.tsx.bak
todo_ui/app/components/: DashboardLayout.tsx  Sidebar.tsx
todo_ui/app/settings/: page.tsx
todo_ui/app/tasks/: page.tsx
(+3 files in other folders)
